# komanawa-lgdrive

./: .gitignore  LICENSE  README.rst  __init__.py  base_functions.py  google_drive_tray_app.py  issues  launch_applet.py  launch_cli.py  path_support.py  project_base.py  pyproject.toml  python_env.txt  setup.py  strech_functions.py  util_functions.py
callable_processes/: __init__.py
cli/: __init__.py  setup.rst
gui/: __init__.py  add_remove_drives.py  add_user_gui.py  auth_user_gui.py  google_drive_tray_pyqt.py  gpath_support_gui.py  rm_user_gui.py  setrclone_options.py
src/komanawa/lgdrive/: __init__.py  launch_cli.py  path_support.py
src/komanawa/lgdrive/gui/: __init__.py  add_remove_drives.py  add_user_gui.py  google_drive_tray_pyqt.py  gpath_support_gui.py  rm_user_gui.py  setrclone_options.py
src/komanawa/lgdrive/utils/: base_functions.py  util_functions.py
src/lgdrive/: launch_cli.py  path_support.py
src/lgdrive/gui/: __init__.py  add_remove_drives.py  add_user_gui.py  google_drive_tray_pyqt.py  gpath_support_gui.py  rm_user_gui.py  setrclone_options.py
src/lgdrive/utils/: base_functions.py  util_functions.py
utils/: base_functions.py  util_functions.py
